tests/ui/packed/issue-27060-2.rs
#[repr(packed)]
pub struct Bad<T: ?Sized> {
    data: T, //~ ERROR the size for values of type
}

fn main() {}
